force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OB_RegistrationReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_RegistrationReason__c</fullName>
    <label>대여 신청 경로</label>
    <length>255</length>
    <type>Text</type>
</CustomField>