force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OB_RejectReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_RejectReason__c</fullName>
    <label>OB Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>