force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OB_SecondRejectReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_SecondRejectReason__c</fullName>
    <label>OB 2차 거부사유</label>
    <length>255</length>
    <type>Text</type>
</CustomField>