force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OB_SecondResult__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_SecondResult__c</fullName>
    <label>OB 2차 결과</label>
    <length>255</length>
    <type>Text</type>
</CustomField>