force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OB_Stage__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_Stage__c</fullName>
    <label>OB 단계</label>
    <length>255</length>
    <type>Text</type>
</CustomField>