force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OB_ThirdAgent__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_ThirdAgent__c</fullName>
    <label>KDCE_OB_ThirdAgent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>