force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OB_ThirdResult__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_ThirdResult__c</fullName>
    <label>OB 3차 결과</label>
    <length>255</length>
    <type>Text</type>
</CustomField>