force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OtherReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OtherReason__c</fullName>
    <label>KDCE_OtherReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>