force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_OutboundProgram__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OutboundProgram__c</fullName>
    <label>KDCE_OutboundProgram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>