force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ProductDescription__c</fullName>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>