force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_ProgramSubCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ProgramSubCode__c</fullName>
    <label>Program Sub Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>