force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_ScienceDemo__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ScienceDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Science Demo</label>
    <type>Checkbox</type>
</CustomField>