force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_SendNPS__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SendNPS__c</fullName>
    <description>[KDCE] 케이스 종료 시 NPS 설문 발송여부 확인</description>
    <inlineHelpText>If the value is &quot;Yes&quot;, Case Survey is sent to the customer via text message when the case is closed. The type of survey varies depending on the Subject Code.</inlineHelpText>
    <label>Send NPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>