force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_SuppliedBirthdayText__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SuppliedBirthdayText__c</fullName>
    <label>웹생년월일(Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>