force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_VerbatimType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_VerbatimType__c</fullName>
    <label>Verbatim Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO meter</fullName>
            </value>
            <value>
                <fullName>Science Demo</fullName>
            </value>
            <value>
                <fullName>Guided Trial</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>이벤트 참여</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>