force-app/main/default/objects/KDCE_DropOutCase__c/fields/KDCE_WebChatURL__c.field-meta.xml
<CustomField>
    <fullName>KDCE_WebChatURL__c</fullName>
    <description>Web Chat Source URL</description>
    <label>Web Chat Source URL</label>
    <type>Url</type>
</CustomField>