force-app/main/default/objects/KDCE_DropOutCase__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Case Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>