force-app/main/default/objects/KDCE_DropOutCase__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Case Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>