force-app/main/default/objects/KDCE_DropOutCase__c/fields/SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail__c</fullName>
    <description>Web Email</description>
    <label>SuppliedEmail</label>
    <type>Email</type>
</CustomField>